@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+For the throwing skill, prefer items with 'is_thrown'.
+This makes the player throw eg throwing daggers before other items.
+Nicolas Weeger 2010-07-23
+
 CRE: alchemy recipes report.
 Nicolas Weeger 2010-07-21
 
